[project]
name = "call-quality-analyzer"
version = "0.1.0"
description = "FastAPI + HTMX web app that scores FreeSWITCH stereo WAV recordings with Microsoft Distill-MOS."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",
    "jinja2==3.1.4",
    "distillmos==0.9.1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "numpy==1.26.4",
    "silero-vad==5.1.2",
]

[tool.uv]
package = false
